<resources>
    <string name="app_name">ProjetMessages</string>
    <string name="login_title">Formulaire de connexion</string>
    <string name="username_label">Nom d\'utilisateur</string>
    <string name="password_label">Mot de passe</string>
    <string name="logout">deconnexion</string>
    <string name="sharedPrefFile">com.example.excilys.projetmessages.login</string>
    <string name="sendMessageButton">Envoyer Message</string>
    <string name="listMessagesButton">Liste Messages</string>
    <string name="sendMessageButtonForm">envoyer</string>
    <string name="clearButtonText">vider</string>
    <string name="sendButtonText">envoyer</string>
    <string name="refreshButtonLabel">Rafraichir</string>
    <string name="buttonRegister">inscription</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sendMessageButtonLabel">envoyer</string>
    <string name="notemptyinput">champ ne doit pas être nul</string>
</resources>
